modify ethics to pertain to our datasets

--- a/DataCheckpoint_Group052_FA23.ipynb
+++ b/DataCheckpoint_Group052_FA23.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "4  2008-11-01  AMD CPU Speeds  2.3 Ghz to 2.69 Ghz  0.0001      0.0727"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "4  2015-01-01  Free Hard Drive Space  750 GB to 999 GB  0.0020      0.0879"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,12 +367,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "category\n",
        "Video Card Description              9599\n",
        "Multi-Monitor Desktop Resolution    5645\n",
        "Language                            2987\n",
@@ -388,10 +389,10 @@
        "Total Hard Drive Space               820\n",
        "Network Speed                        656\n",
        "Microphones                          231\n",
-       "Name: category, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,31 +404,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "category\n",
        "Video Card Description    9599\n",
-       "Name: category, dtype: int64"
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# We only care about GPU data\n",
-    "steam_cpu_gpu = steam_dates[steam_dates['category'] == 'Video Card Description']\n",
+    "steam_gpu = steam_dates[steam_dates['category'] == 'Video Card Description']\n",
     "\n",
-    "steam_cpu_gpu['category'].value_counts()"
+    "steam_gpu['category'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -512,19 +514,19 @@
        "15699  2019-01-01  Video Card Description  NaN  0.0001      0.0024"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# check if there is any missing data\n",
-    "steam_cpu_gpu[steam_cpu_gpu.isnull().any(axis=1)].head()"
+    "steam_gpu[steam_gpu.isnull().any(axis=1)].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -679,22 +681,22 @@
        "[9543 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Drop missing data\n",
-    "steam_cpu_gpu = steam_cpu_gpu.dropna()\n",
+    "steam_gpu = steam_gpu.dropna()\n",
     "\n",
-    "assert steam_cpu_gpu[steam_cpu_gpu.isnull().any(axis=1)].shape == (0,5)\n",
-    "steam_cpu_gpu"
+    "assert steam_gpu[steam_gpu.isnull().any(axis=1)].shape == (0,5)\n",
+    "steam_gpu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -703,14 +705,14 @@
        "(9543, 5)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# What is the shape of this data set?\n",
-    "steam_cpu_gpu.shape"
+    "steam_gpu.shape"
    ]
   },
   {
@@ -1820,7 +1822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our data come from Steam surveys, company sales, general finance data, and other easily-accessible, and public information. Because the data from the Steam surveys is already anonymized, there should not be any ethical or privacy concerns with being able to extrapolate personal identifiable information from the survey data. However, this makes it difficult to account for any potential biases in the dataset as we can only guess at the demographic of Steam users who answered the survey. Additionally, in these types of surveys it is important to be aware of many different types of biases that may come into play, including non-response, self-reporting, and other confounding variables, which could lead to a disproportionate amount of high-end hardware appearing in survey results. One potential source of data we have discussed involves scraping data from websites, which may not be legal/allowed depending on the website. As we consider other potential data sources, being aware of terms of service and other restrictions will be an important factor in choosing our final datasets. Regarding company sales and finance data, we don’t anticipate any ethical or privacy related concerns in our use of the data since by nature it is anonymized. There is potential to be able to identify individual companies or investors through the data, one way to address this is simply aggregating data, since we only require a broader overview. There may be concerns as to how this data is acquired and any potential biases that may be introduced. To help detect these biases as we perform analysis of the data, we will be careful to thoroughly explore the data before deeper analysis, attempting to fully understand it and being careful to note factors that may indicate biases in the data. In our post-analysis, we will discuss the results of our exploration. If we suspect any biases, we will explain their significance and the impact on the results of our analysis."
+    "Our data come from Steam surveys, eBay sales, and general finance data. All of these sources are easily-accessible and public information. Because the data from the Steam surveys is already anonymized, there should not be any ethical or privacy concerns with being able to extrapolate personal identifiable information from the survey data. However, this makes it difficult to account for any potential biases in the dataset as we can only guess at the demographic of Steam users who answered the survey. Additionally, in these types of surveys it is important to be aware of many different types of biases that may come into play, including non-response, self-reporting, and other confounding variables, which could lead to a disproportionate amount of high-end hardware appearing in survey results. When choosing to scrape data from eBay, we had to be aware of terms of service and other restrictions before choosing this as a source for our final dataset. Regarding eBay sales and finance data, we don’t anticipate any ethical or privacy related concerns in our use of the data since by nature it is anonymized. There is potential to be able to identify individual companies or investors through the data, one way to address this is simply aggregating data, since we only require a broader overview. There may be concerns as to how this data is acquired and any potential biases that may be introduced. To help detect these biases as we perform analysis of the data, we will be careful to thoroughly explore the data before deeper analysis, attempting to fully understand it and being careful to note factors that may indicate biases in the data. In our post-analysis, we will discuss the results of our exploration. If we suspect any biases, we will explain their significance and the impact on the results of our analysis."
    ]
   },
   {
@@ -1888,7 +1890,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
