initial crypto graph

--- a/EDAjupyterNote/steam_line_graphs.ipynb
+++ b/EDAjupyterNote/steam_line_graphs.ipynb
@@ -5,7 +5,7 @@
    "id": "703954f4",
    "metadata": {},
    "source": [
-    "# STEAM Data Over Time"
+    "# Steam Data Over Time"
    ]
   },
   {
