refactor and move data to separate directory

--- a/EDAjupyterNote/crypto_line_graphs.ipynb
+++ b/EDAjupyterNote/crypto_line_graphs.ipynb
@@ -133,11 +133,11 @@
    ],
    "source": [
     "# Load and clean data\n",
-    "bitcoin = pd.read_csv('../BTC-USD.csv')\n",
+    "bitcoin = pd.read_csv('../data/BTC-USD.csv')\n",
     "bitcoin.columns = bitcoin.columns.str.lower().str.replace(' ','_')\n",
     "bitcoin['currency'] = \"BTC\"\n",
     "\n",
-    "ethereum = pd.read_csv('../ETH-USD.csv')\n",
+    "ethereum = pd.read_csv('../data/ETH-USD.csv')\n",
     "ethereum.columns = ethereum.columns.str.lower().str.replace(' ','_')\n",
     "ethereum['currency'] = \"ETH\"\n",
     "\n",
