--- a/EDAjupyterNote/gpu_msrp_scraper.ipynb
+++ b/EDAjupyterNote/gpu_msrp_scraper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "12ce4b1a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "da047af5",
    "metadata": {},
    "outputs": [
@@ -102,13 +102,55 @@
        "4  Nvidia RTX 3080 Ti              1199"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gpu_msrp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Nvidia RTX 3090 Ti', 'Nvidia RTX 4090', 'Nvidia RTX 3090',\n",
+       "       'Nvidia RTX 4080', 'Nvidia RTX 3080 Ti', 'AMD Radeon RX 6950 XT',\n",
+       "       'AMD Radeon RX 7900 XTX', 'AMD Radeon RX 6900 XT',\n",
+       "       'Nvidia RTX 2080 Ti', 'AMD Radeon RX 7900 XT',\n",
+       "       'Nvidia RTX 3080 (12GB)', 'AMD Radeon VII', 'Nvidia RTX 2080',\n",
+       "       'Nvidia RTX 2080 SUPER', 'Nvidia RTX 3080 (10GB)',\n",
+       "       'AMD Radeon RX 6800 XT', 'Nvidia GTX 980 Ti', 'Nvidia GTX 1080',\n",
+       "       'Nvidia RTX 3070 Ti', 'AMD Radeon RX 6800',\n",
+       "       'AMD Radeon RX 6750 XT', 'Nvidia GTX 980', 'AMD Radeon RX Vega 64',\n",
+       "       'Nvidia RTX 2070', 'Nvidia RTX 2070 SUPER', 'Nvidia RTX 3070',\n",
+       "       'AMD Radeon RX 6700 XT', 'Nvidia GTX 1070 Ti',\n",
+       "       'AMD Radeon RX 6700', 'AMD Radeon RX 5700 XT',\n",
+       "       'AMD Radeon RX 6650 XT', 'AMD Radeon RX Vega 56',\n",
+       "       'Nvidia GTX 1080 Ti', 'Nvidia RTX 2060 SUPER',\n",
+       "       'Nvidia RTX 3060 Ti', 'AMD Radeon RX 6600 XT', 'Nvidia GTX 1070',\n",
+       "       'AMD Radeon RX 5700', 'Nvidia RTX 2060', 'AMD Radeon RX 6600',\n",
+       "       'Nvidia RTX 3060', 'AMD Radeon RX 5600 XT', 'Nvidia GTX 1660 Ti',\n",
+       "       'Nvidia GTX 1060', 'Nvidia RTX 3050', 'Nvidia GTX 1660 SUPER',\n",
+       "       'Nvidia GTX 1660', 'AMD Radeon RX 5500 XT (8GB)',\n",
+       "       'AMD Radeon RX 6500 XT', 'Nvidia GTX 960',\n",
+       "       'AMD Radeon RX 5500 XT (4GB)', 'Nvidia GTX 1650 SUPER',\n",
+       "       'AMD Radeon RX 6400', 'Nvidia GTX 1650', 'Nvidia GTX 1050 Ti',\n",
+       "       'Intel Arc 3 A380', 'Nvidia GTX 1050'], dtype=object)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gpu_msrp['Graphics Card'].unique()"
    ]
   },
   {
@@ -151,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
