more eda plots for crypto prices

--- a/EDACheckpoint_Group052_FA23.ipynb
+++ b/EDACheckpoint_Group052_FA23.ipynb
@@ -1893,19 +1893,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Section 2 of EDA if you need it  - please give it a better title than this\n",
-    "\n",
-    "Some more words and stuff.  Remember notebooks work best if you interleave the code that generates a result with properly annotate figures and text that puts these results into context."
+    "### GPU Adoption Over Time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's first filter out all the irrelevant GPU's and only focus on desktop gaming GPU's."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['NVIDIA GeForce GTX 260', 'NVIDIA GeForce GTX 460',\n",
+       "       'NVIDIA GeForce GTX 550 Ti', 'NVIDIA GeForce GTX 560',\n",
+       "       'NVIDIA GeForce GTX 560 Ti', 'NVIDIA GeForce GTX 560M',\n",
+       "       'NVIDIA GeForce GTX 570', 'NVIDIA GeForce GTX 580',\n",
+       "       'NVIDIA GeForce GTX 650', 'NVIDIA GeForce GTX 650 Ti',\n",
+       "       'NVIDIA GeForce GTX 650 Ti Boost', 'NVIDIA GeForce GTX 660',\n",
+       "       'NVIDIA GeForce GTX 660 Ti', 'NVIDIA GeForce GTX 660M',\n",
+       "       'NVIDIA GeForce GTX 670', 'NVIDIA GeForce GTX 680',\n",
+       "       'NVIDIA GeForce GTX 750', 'NVIDIA GeForce GTX 750 Ti',\n",
+       "       'NVIDIA GeForce GTX 760', 'NVIDIA GeForce GTX 765M',\n",
+       "       'NVIDIA GeForce GTX 770', 'NVIDIA GeForce GTX 770M',\n",
+       "       'NVIDIA GeForce GTX 780', 'NVIDIA GeForce GTX 780 Ti',\n",
+       "       'NVIDIA GeForce GTX 850M', 'NVIDIA GeForce GTX 860M',\n",
+       "       'NVIDIA GeForce GTX 870M', 'NVIDIA GeForce GTX 970',\n",
+       "       'NVIDIA GeForce GTX 980', 'NVIDIA GeForce GTX 745',\n",
+       "       'NVIDIA GeForce GTX 960', 'NVIDIA GeForce GTX 970M',\n",
+       "       'NVIDIA GeForce GTX 950M', 'NVIDIA GeForce GTX 980M',\n",
+       "       'NVIDIA GeForce GTX 950', 'NVIDIA GeForce GTX 980 Ti',\n",
+       "       'NVIDIA GeForce GTX 960M', 'NVIDIA GeForce GTX 1070',\n",
+       "       'NVIDIA GeForce GTX 1080', 'NVIDIA GeForce GTX 965M',\n",
+       "       'NVIDIA GeForce GTX 1060', 'AMD Radeon RX 480',\n",
+       "       'AMD Radeon RX 460', 'AMD Radeon RX 470',\n",
+       "       'NVIDIA GeForce GTX 1050 Ti', 'NVIDIA GeForce GTX 1050',\n",
+       "       'NVIDIA GeForce GTX 1080 Ti', 'NVIDIA GeForce GTX 1070 Ti',\n",
+       "       'AMD Radeon RX 580', 'AMD Radeon RX 560', 'AMD Radeon RX 550',\n",
+       "       'NVIDIA GeForce RTX 2070', 'NVIDIA GeForce RTX 2080',\n",
+       "       'AMD Radeon RX 570', 'AMD Radeon RX Vega',\n",
+       "       'NVIDIA GeForce RTX 2080 Ti', 'NVIDIA GeForce RTX 2060',\n",
+       "       'AMD Radeon Vega 8 Graphics', 'NVIDIA GeForce GTX 1660 Ti',\n",
+       "       'NVIDIA GeForce GTX 1660', 'NVIDIA GeForce GTX 1650',\n",
+       "       'AMD Radeon RX 580 2048SP', 'AMD Radeon RX 590 Series',\n",
+       "       'AMD Radeon RX Vega 11 Graphics', 'NVIDIA GeForce RTX 2070 SUPER',\n",
+       "       'AMD Radeon RX 5700 XT', 'NVIDIA GeForce RTX 2060 SUPER',\n",
+       "       'NVIDIA GeForce RTX 2080 SUPER', 'AMD Radeon RX 5700',\n",
+       "       'NVIDIA GeForce GTX 1660 SUPER', 'AMD Radeon Vega 3 Graphics',\n",
+       "       'AMD Radeon Vega 8 Mobile Graphics',\n",
+       "       'NVIDIA GeForce GTX 1650 SUPER', 'NVIDIA GeForce GTX 1650 Ti',\n",
+       "       'AMD Radeon RX 5600 XT', 'AMD Radeon RX 5500 XT',\n",
+       "       'NVIDIA GeForce RTX 2070 with Max-Q Design',\n",
+       "       'NVIDIA GeForce RTX 3080', 'NVIDIA GeForce RTX 3060 Ti',\n",
+       "       'NVIDIA GeForce RTX 3090', 'NVIDIA GeForce RTX 3070',\n",
+       "       'NVIDIA GeForce RTX 3060', 'NVIDIA GeForce RTX 3060 Laptop GPU',\n",
+       "       'NVIDIA GeForce RTX 3070 Laptop GPU',\n",
+       "       'NVIDIA GeForce RTX 3050 Laptop GPU', 'NVIDIA GeForce RTX 3070 Ti',\n",
+       "       'NVIDIA GeForce RTX 3080 Ti', 'AMD Radeon RX 6700 XT',\n",
+       "       'NVIDIA GeForce RTX 3050', 'NVIDIA GeForce RTX 3050 Ti',\n",
+       "       'NVIDIA GeForce RTX 3050 Ti Laptop GPU',\n",
+       "       'NVIDIA GeForce RTX 2060 with Max-Q Design', 'AMD Radeon RX 5500M',\n",
+       "       'NVIDIA GeForce RTX 3080 Laptop GPU', 'AMD Radeon RX 6600 XT',\n",
+       "       'AMD Radeon RX 6900 XT', 'AMD Radeon RX 6600',\n",
+       "       'AMD Radeon RX 6800 XT', 'NVIDIA GeForce RTX 3070 Ti Laptop GPU',\n",
+       "       'AMD Radeon RX 6500 XT', 'NVIDIA GeForce RTX 4090',\n",
+       "       'NVIDIA GeForce RTX 4070 Ti', 'NVIDIA GeForce RTX 4080',\n",
+       "       'AMD Radeon RX 6650 XT', 'NVIDIA GeForce RTX 4060 Laptop GPU',\n",
+       "       'NVIDIA GeForce RTX 4070', 'AMD Radeon RX 6750 XT',\n",
+       "       'NVIDIA GeForce RTX 4050 Laptop GPU', 'AMD Radeon RX 7900 XTX',\n",
+       "       'NVIDIA GeForce RTX 4060 Ti', 'NVIDIA GeForce RTX T10-8',\n",
+       "       'NVIDIA GeForce RTX 4060', 'NVIDIA GeForce RTX 4070 Laptop GPU'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## YOUR CODE HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
+    "steam_stack = steam_gpu[(steam_gpu['name'].str.contains(\"AMD Radeon RX\")) |\n",
+    "                      (steam_gpu['name'].str.contains(\"AMD Radeon Vega\")) |\n",
+    "                      (steam_gpu['name'].str.contains(\"NVIDIA GeForce GTX\")) |\n",
+    "                      (steam_gpu['name'].str.contains(\"NVIDIA GeForce RTX\"))]\n",
+    "steam_stack['name'].unique()"
    ]
   },
   {
