adoption over tiime plot

--- a/EDACheckpoint_Group052_FA23.ipynb
+++ b/EDACheckpoint_Group052_FA23.ipynb
@@ -2469,7 +2469,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that some generations saw faster adoption of GPU's compared to to other years. GPU's released around 2016 saw a particularly fast adoption while 2018 saw particularly slow adoption."
+    "We can see that some generations saw faster adoption of GPU's compared to to other years. GPU's released around 2016 saw a particularly fast adoption while 2017-2018 saw particularly slow adoption."
    ]
   },
   {
