add MSRP data to EDA

--- a/EDAjupyterNote/gpu_msrp_scraper.ipynb
+++ b/EDAjupyterNote/gpu_msrp_scraper.ipynb
@@ -155,17 +155,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "32116812",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\benjx\\AppData\\Local\\Temp/ipykernel_5064/1836989524.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "  gpu_msrp.columns = gpu_msrp.columns.str.replace('(US$)','').str.strip().str.lower().str.replace(' ','_')\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(57, 2)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,6 +182,15 @@
     "# Clean up headers and look at shape\n",
     "gpu_msrp.columns = gpu_msrp.columns.str.replace('(US$)','').str.strip().str.lower().str.replace(' ','_')\n",
     "gpu_msrp.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpu_msrp.to_csv('../data/gpu_msrp.csv', index=False)"
    ]
   }
  ],
